hphp/hack/test/typecheck/test_toplevel_stmt_in_braced_namespace.php
<?hh
namespace Foo {
  function foo(int $x): void {
    echo $x + $x;
  }
  foo(true);
}
